--- a/app/views/landing.html
+++ b/app/views/landing.html
@@ -90,35 +90,41 @@
     </section><!--/#jumbo-landing-->
     <section id="landing-content" class="container">
         <div class="row">
-            <article class="col-md-10 col-md-offset-1">
-                <div class="col-md-8">
-                    <h2 class="title-secondary">¿Cómo puedo realizar una consulta?</h2>
-                    <p class="text-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <article class="col-md-10 col-md-offset-1 article-description">
+                <div class="col-md-12">
+                    <div class="col-md-9">
+                        <h2 class="title-secondary">¿Cómo puedo realizar una consulta?</h2>
+                        <p class="text-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <a ui-sref="#" title="Ingrese una consulta" class="btn btn-warning">Ingrese una consulta</a>
+                    </div>
+                    <figure class="col-md-3">
+                        <img src="#" alt="Envío de consultas" />
+                    </figure>
                 </div>
-                <figure class="col-md-4">
-                    <img src="#" alt="Envío de consultas" />
-                </figure>
             </article>
         </div>
         <div class="row">
-            <article class="col-md-10 col-md-offset-1">
-                <div class="col-md-8 pull-right">
-                    <h2 class="title-secondary">¿Cómo se constituye el digesto jurídico?</h2>
-                    <p class="text-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <article class="col-md-10 col-md-offset-1 article-description">
+                <div class="col-md-12">
+                    <div class="col-md-9 pull-right">
+                        <h2 class="title-secondary">¿Cómo se constituye el digesto jurídico?</h2>
+                        <p class="text-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <a ui-sref="#" title="Ir a Ley 26.939" class="btn btn-warning">Ver Ley 26.939</a>
+                    </div>
+                    <figure class="col-md-3 pull-left">
+                        <img src="#" alt="Envío de consultas" />
+                    </figure>
                 </div>
-                <figure class="col-md-4 pull-left">
-                    <img src="#" alt="Envío de consultas" />
-                </figure>
             </article>
         </div>
     </section><!--/#landing-content-->
