--- a/app/views/landing.html
+++ b/app/views/landing.html
@@ -8,42 +8,43 @@
                             <legend>Buscar normas</legend>
                             <div class="form-group">
                                 <label for="norma-nro-codigo">N° / Código de Norma</label>
-                                <input type="text" class="form-control" id="norma-nro-codigo" placeholder="Código de Norma">
+                                <input type="text" class="form-control" id="norma-nro-codigo" placeholder="Ingresar número de norma">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputPassword1">Categoría</label>
                                 <select class="form-control">
-                                    <option>ADM – Administrativo</option>
-                                    <option>ACU – Cultura, Ciencia y Tecnología</option>
-                                    <option>AED – Educación</option>
-                                    <option>ASA – Salud Pública</option>
-                                    <option>ASE – Seguridad</option>
-                                    <option>ASO – Acción y Desarrollo Social</option>
-                                    <option>B – Aduanero</option>
-                                    <option>C – Aeronáutico-Espacial</option>
-                                    <option>D – Bancario, Monetario y Financiero</option>
-                                    <option>E – Civil</option>
-                                    <option>F – Comercial</option>
-                                    <option>G – Comunitario</option>
-                                    <option>H – Constitucional</option>
-                                    <option>I – De la Comunicación</option>
-                                    <option>J – Diplomático y Consular</option>
-                                    <option>K – Económico</option>
-                                    <option>L – Impositivo</option>
-                                    <option>M – Industrial</option>
-                                    <option>N – Internacional Privado</option>
-                                    <option>O – Internacional Público</option>
-                                    <option>P – Laboral</option>
-                                    <option>Q – Medio Ambiente</option>
-                                    <option>R – Militar</option>
-                                    <option>S – Penal</option>
-                                    <option>T – Político</option>
-                                    <option>U – Procesal Civil y Comercial</option>
-                                    <option>V – Procesal Penal</option>
-                                    <option>W – Público Provincial y Municipal</option>
-                                    <option>X – Recursos Naturales</option>
-                                    <option>Y – Seguridad Social</option>
-                                    <option>Z – Transporte y Seguros</option>
+                                    <option value="0">Todas</option>
+                                    <option value="1">ADM – Administrativo</option>
+                                    <option value="2">ACU – Cultura, Ciencia y Tecnología</option>
+                                    <option value="3">AED – Educación</option>
+                                    <option value="4">ASA – Salud Pública</option>
+                                    <option value="5">ASE – Seguridad</option>
+                                    <option value="6">ASO – Acción y Desarrollo Social</option>
+                                    <option value="7">B – Aduanero</option>
+                                    <option value="8">C – Aeronáutico-Espacial</option>
+                                    <option value="9">D – Bancario, Monetario y Financiero</option>
+                                    <option value="10">E – Civil</option>
+                                    <option value="11">F – Comercial</option>
+                                    <option value="12">G – Comunitario</option>
+                                    <option value="13">H – Constitucional</option>
+                                    <option value="14">I – De la Comunicación</option>
+                                    <option value="15">J – Diplomático y Consular</option>
+                                    <option value="16">K – Económico</option>
+                                    <option value="17">L – Impositivo</option>
+                                    <option value="18">M – Industrial</option>
+                                    <option value="19">N – Internacional Privado</option>
+                                    <option value="20">O – Internacional Público</option>
+                                    <option value="21">P – Laboral</option>
+                                    <option value="22">Q – Medio Ambiente</option>
+                                    <option value="23">R – Militar</option>
+                                    <option value="24">S – Penal</option>
+                                    <option value="25">T – Político</option>
+                                    <option value="26">U – Procesal Civil y Comercial</option>
+                                    <option value="27">V – Procesal Penal</option>
+                                    <option value="28">W – Público Provincial y Municipal</option>
+                                    <option value="29">X – Recursos Naturales</option>
+                                    <option value="30">Y – Seguridad Social</option>
+                                    <option value="31">Z – Transporte y Seguros</option>
                                 </select>
                             </div>
                             <div class="form-group">
@@ -51,28 +52,30 @@
                                 <div class="row">
                                     <div class="col-md-6">
                                         <select class="form-control">
-                                            <option>2014</option>
-                                            <option>2013</option>
-                                            <option>2012</option>
-                                            <option>2011</option>
-                                            <option>2010</option>
-                                            <option>2009</option>
-                                            <option>2008</option>
-                                            <option>2007</option>
-                                            <option>2006</option>
+                                            <option value="0" disabled selected>Desde</option>
+                                            <option value="1">2014</option>
+                                            <option value="2">2013</option>
+                                            <option value="3">2012</option>
+                                            <option value="4">2011</option>
+                                            <option value="5">2010</option>
+                                            <option value="6">2009</option>
+                                            <option value="7">2008</option>
+                                            <option value="8">2007</option>
+                                            <option value="9">2006</option>
                                         </select>
                                     </div>
                                     <div class="col-md-6">
                                         <select class="form-control">
-                                            <option>2014</option>
-                                            <option>2013</option>
-                                            <option>2012</option>
-                                            <option>2011</option>
-                                            <option>2010</option>
-                                            <option>2009</option>
-                                            <option>2008</option>
-                                            <option>2007</option>
-                                            <option>2006</option>
+                                            <option value="0" disabled selected>Hasta</option>
+                                            <option value="1">2014</option>
+                                            <option value="2">2013</option>
+                                            <option value="3">2012</option>
+                                            <option value="4">2011</option>
+                                            <option value="5">2010</option>
+                                            <option value="6">2009</option>
+                                            <option value="7">2008</option>
+                                            <option value="8">2007</option>
+                                            <option value="9">2006</option>
                                         </select>
                                     </div>
                                 </div>
@@ -88,44 +91,47 @@
             </div>
         </div><!--/.container-->
     </section><!--/#jumbo-landing-->
-    <section id="landing-content" class="container">
-        <div class="row">
-            <article class="col-md-10 col-md-offset-1 article-description">
-                <div class="col-md-12">
-                    <div class="col-md-9">
-                        <h2 class="title-secondary">¿Cómo puedo realizar una consulta?</h2>
-                        <p class="text-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                        <a ui-sref="#" title="Ingrese una consulta" class="btn btn-warning">Ingrese una consulta</a>
+    <section id="landing-content">
+        <div class="container">
+            <div class="row">
+                <article class="col-md-10 col-md-offset-1 article-description">
+                    <div class="col-md-12">
+                        <div class="col-md-9">
+                            <h2 class="title-secondary">¿Cómo puedo realizar una consulta?</h2>
+                            <p class="text-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                            cillum dolore eu fugiat nulla pariatur.</p>
+                            <a ui-sref="#" title="Ingrese una consulta" class="btn btn-warning">Ingrese una consulta</a>
+                        </div>
+                        <figure class="col-md-3">
+                            <img src="#" alt="Envío de consultas" />
+                        </figure>
                     </div>
-                    <figure class="col-md-3">
-                        <img src="#" alt="Envío de consultas" />
-                    </figure>
-                </div>
-            </article>
+                </article>
+            </div>
         </div>
-        <div class="row">
-            <article class="col-md-10 col-md-offset-1 article-description">
-                <div class="col-md-12">
-                    <div class="col-md-9 pull-right">
-                        <h2 class="title-secondary">¿Cómo se constituye el digesto jurídico?</h2>
-                        <p class="text-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                        <a ui-sref="#" title="Ir a Ley 26.939" class="btn btn-warning">Ver Ley 26.939</a>
+        <hr class="border-bottom-gray" />
+        <div class="container">
+            <div class="row">
+                <article class="col-md-10 col-md-offset-1 article-description">
+                    <div class="col-md-12">
+                        <div class="col-md-9 pull-right">
+                            <h2 class="title-secondary">¿Cómo se constituye el digesto jurídico?</h2>
+                            <p class="text-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                            cillum dolore eu fugiat nulla pariatur.</p>
+                            <a ui-sref="#" title="Ir a Ley 26.939" class="btn btn-warning">Ver Ley 26.939</a>
+                        </div>
+                        <figure class="col-md-3 pull-left">
+                            <img src="#" alt="Envío de consultas" />
+                        </figure>
                     </div>
-                    <figure class="col-md-3 pull-left">
-                        <img src="#" alt="Envío de consultas" />
-                    </figure>
-                </div>
-            </article>
+                </article>
+            </div>
         </div>
     </section><!--/#landing-content-->
 </div><!--/#landing-->
