--- a/app/styles/_landing.scss
+++ b/app/styles/_landing.scss
@@ -41,21 +41,8 @@
 
 /* clases */
 
-.form-base
+.border-bottom-gray
 {
-	fieldset
-	{
-		legend
-		{
-			border: none;
-			font-size: $font-size-medium;
-			font-weight: 600;
-			margin: 0 0 10px 0;
-		}
-		label
-		{
-			font-size: $font-size-small;
-			font-weight: 400;
-		}
-	}
+	border-top: none;
+	border-bottom: 1px solid $color-soft-gray;
 }
