--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -31,7 +31,7 @@ $font-size-xlarge:			$font-size-base * 2; 				// 30px
 $font-size-large:			$font-size-base * 1.6; 				// 24px
 $font-size-medium:			$font-size-base * 1.33;				// 20px
 $font-size-base: 			15px;								// 15px
-$font-size-small:			$font-size-base * 0.87; 			// 13px
+$font-size-small:			$font-size-base * 0.85; 			// 13px
 $font-size-xsmall:			$font-size-base * 0.73; 			// 11px
 $text-shadow-image: 		0 2px 10px rgba(0, 0, 0, 0.1);
 
@@ -102,7 +102,7 @@ footer
 		}
 		label
 		{
-			font-size: $font-size-small;
+			font-size: $font-size-base;
 			font-weight: 400;
 		}
 	}
@@ -214,6 +214,10 @@ footer
 	font-family: $font-family-secondary;
 	font-size: $font-size-base !important;
 	margin: 20px 0;
+}
+.title-heading
+{
+
 }
 .title-primary
 {
